develop controllers and frontend part

--- a/Go-Apply-Frontend/package.json
+++ b/Go-Apply-Frontend/package.json
@@ -42,7 +42,7 @@
     "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -61,6 +61,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "rough-notation": "^0.5.1",
