--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
