--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-lib": "^1.17.1",
     "razorpay": "^2.9.6",
     "validator": "^13.15.15"
   },
